# xmq

./: .gitignore  .ignore  .project  CHANGES  LICENSE  Makefile  README.md  README.yaep.md  RELEASE  configure  configure.ac  index.html  install.sh  jproject.settings  pom.xml  pom.xmq  project  test.sh  testur.cc  uninstall.sh  xmq-mode.el  xmq.1  xmq_spec.css  xmq_spec.html
.github/workflows/: build_java.yml  build_macosx.yml  build_ubuntu.yml  build_wasm.yml  build_windows.yml  edge.yml  release.yml  release_ubuntu.yml
OpenMike/: Makefile  ambig.ixml  basic.inp  basic.ixml  debug-ixml.sh  formula.ixml  people.csv  render-trace.xslq  talk.txt  trace-ixml.sh  view-ixml.sh
autoconf/: config.h.in  spec.inc.in  spec.mk.in
doc/: Makefile  xmq.1  xmq.tex
grammars/: Makefile  ansic.ixml  debug-ixml.sh  trace-ixml.sh  view-ixml.sh
grammars/core/: tsv.ixml  xmq.ixml
grammars/data/: csv.ixml  scsv.ixml  tsv.ixml
grammars/data/csv-test/: test_1.out  test_2.inp  test_2.out
grammars/languages/: ansic.ixml  c.ixml
grammars/languages/c-tests/: test.c
grammars/measurement/: metar.ixml
grammars/misc/: testmeter.ixml
grammars/xmq-utils/: parse.ixml  parse.xslq
intro/: genintro.sh  list.txt
make/: Main.mk  Makefile.in
make/eclipse-cproject/: .cproject  .project  Makefile  cproject.xmq  project.xmq
make/eclipse-cproject/src/: xmq-cli.c  xmq.c  xmq.h
make/eclipse-cproject/src/parts/: allocate.c  allocate.h  always.c  always.h  colors.c  colors.h  core.c  core.h  default_themes.c  default_themes.h  entities.c  entities.h  hashmap.c  hashmap.h  hashtab.c  hashtab.h  ixml.c  ixml.h  json.c  json.h  membuffer.c  membuffer.h  objstack.c  objstack.h  stack.c  (+21 more)
make/java/: Makefile  configure
rapidxml/: rapidxml.hpp  rapidxml_print.hpp
scripts/: autocompletion_for_xmq.sh  build_web.sh  build_xmq_from_parts.sh  deploy.sh  grab_headers_for_testinternal.sh  libxmq-docs.xml  release.sh  run.sh  test_ixml_cases.sh  windows-installer-wixl.wxs  xmless  xmq-diff  xmq-git-diff  xmq-git-meld  xmq-less  xmq-meld  xmqless
spec/: attr_with_newlines.xml  attr_with_newlines.xmq  children.xml  children.xmq  children_no_ws.xmq  empty_node.xml  empty_node_explicit.xmq  feature.xml  feature.xmq  genspechtml.sh  html_attr.html  html_attr.xmq  html_link.html  html_link.xmq  html_voids.html  html_voids.xmq  html_voids_extra.xmq  joining_quotes.xml  joining_quotes.xmq  joining_quotes_std.xmq  leading_newline.xml  leading_newline.xmq  leading_wsnl.xml  leading_wsnl.xmq  list.txt  multi.xml  multi.xmq  multi_line_attr.xml  multi_line_attr.xmq  multi_with_config.xmq  necessary_join.xml  necessary_join.xmq  node_click.xml  node_click.xmq  node_with_attr.xml  node_with_attr.xmq  node_with_data_lines.xml  node_with_data_lines.xmq  node_with_forced_indents.xml  node_with_forced_indents.xmq  (+32 more)
src/: cmdline.cc  main.cc  parse.cc  parse.h  settings.h  testinternals.cc  util.cc  util.h  xml2xmq.cc  xmq.h  xmq2xml.cc
src/cc/: main.cc  parse.cc  util.h  xml2xmq.cc  xmq.h  xmq2xml.cc
src/main/c/: testinternals.c  xmq-cli.c  xmq.c  xmq.h
src/main/cc/: cmdline.cc  cmdline.h  document.cc  main.cc  parse.cc  parse_xmlhtml.cc  render.cc  testinternals.cc  util.cc  util.h  xml2xmq.cc  xmq.h  xmq2xml.cc  xmq_implementation.cc  xmq_implementation.h  xmq_rapidxml.h
src/main/ecmascript/: index.js
src/main/java/: module-info.java
src/main/javascript/: package.json
tests/: 001_node.test  002_nodes.test  003_nodes_and_lines.test  004_quote.test  005_quotes.test  006_quotes_and_lines.test  007_quote_empty.test  008_quotes_with_depth.test  009_quotes_with_quotes.test  010_key_value.test  011_keys_values.test  012_entity.test  013_entities.test  014_quotes_entites.test  015_attr_value_quotes.test  016_quote_multiline.test  017_quote_incidental.test  018_children.test  019_single_quoted_child.test  020_key_value.test  021_attribute.test  022_attributes.test  023_attributes_children.test  024_attribute_key_value.test  025_fixed_quote.test  025_prepend_quote.test  026_quote_depth.test  027_quote_force_indentation.test  028_depth_quote.test  029_depth_quote.test  029_prepend_depth_quote.test  030_leading_trailing_newlines_quote.test  031_key_attr_value.test  032_comments.test  033_base64.test  034_multiline_trimming.test  035_odd_trimming.test  035_prepend_trimming.test  036_multiline_leading_ending_spaces.test  037_multiline_more_leading_ending.test  (+343 more)
tests/ixml/correct/: aaa.output.xml  aaa.output.xmq  address.output.xmq  arith.output.xmq  attribute-value.output.xmq  diary.output.xmq  diary3.output.xmq  element-content.output.xmq  email.output.xmq  empty-group.output.xmq  expr.output.xmq  expr2.output.xmq  expr3.output.xmq  expr5.output.xmq  expr6.output.xmq  hash.output.xmq  hex.output.xmq  hex3.output.xmq  json.ixml  json.output.xmq  json1.ixml  json1.output.xmq  lf.output.xmq  marked.output.xmq  nested-comment.output.xmq  para-test.output.xmq  poly.output.xmq  program.output.xmq  range-comments.output.xmq  range.output.xmq  ranges.output.xmq  ranges1.output.xmq  string.output.xmq  tab.output.xmq  test.output.xmq  unicode-range.output.xmq  unicode-range1.output.xmq  unicode-range2.output.xmq  vcard.output.xmq  xml.output.xmq  (+1 more)
tests/java/: BasicJavaTests.java  Test1.java
tests/javascript/: package-lock.json  package.json  test.js
tests/resources/: books.xml  cars.json  owners.json
tests/samples/: meter_readings.tsv  plumbing_products.csv
web/: 50x.htmq  config.xml  index.htmq
web/resources/: SEQLXML26.xml  WIPO_ST96.xsd  WIPO_priority_document.xml  car.xml  car.xmq  code.js  compound.xmq  config.xmq  config_more.xmq  corners.xmq  crazy.xml  docx_example.xml  dtd_example.xml  genlanguages.xslq  ibmpcjr_cart.xml  index.htmq  instances.json  jabber.xml  java_pojo.xml  languages.xmq  multi.xmq  odt_example.xml  pom.xml  rfc2629xslt.xml  rfcxml.xslt  rss.xml  saml_artifact.xml  saml_authn_request.xml  saml_authn_response.xml  saml_idp_metadata.xml  saml_sp_metadata.xml  shiporder.xml  simple_page.htmq  soap_request.xml  style.css  sugar.xmq  syntactic_sugar.xmq  todos.json  todos.xslt  todosframed.xslq  (+6 more)
(+183 files in other folders)
